WIP tic-tac-toe