@@ -19,12 +19,13 @@ dependencies {
     implementation "org.openjfx:javafx-controls:21.0.8:${platform}"
     implementation "org.openjfx:javafx-graphics:21.0.8:${platform}"
     implementation "org.openjfx:javafx-fxml:21.0.8:${platform}"
+    implementation "org.openjfx:javafx-media:21.0.8:${platform}"
 
     testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
 }
 
 application {
-    mainClass = 'com.kodilla.Main'
+    mainClass = 'com.kodilla.TicTacToe'
 }
 
 java {
@@ -41,7 +42,8 @@ tasks.withType(JavaExec) {
 
     jvmArgs += [
             '--module-path', javafxPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.media',
+            '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED'
     ]
 }
 
